Generate the CodeRunner lesson catalog from the branch chain
`pnpm catalog` turns Workshop-Code into a CodeRunner catalog: modules.json plus
one complete starting project per module, eight of them, read out of the bare
mirror so an export is always a branch tip.

The branches stay the single source of truth, for the same reason the submodule
rule exists. Three things are derived rather than typed: which lesson owns a
branch comes from scanning pages for `branch="mech-2-Commands"`, `order` comes
from chain position in tens, and each README's "what changed" list comes from a
diff against the previous branch.

Prose is not derived. A module README is a bench card, not a second copy of the
lesson, so cards live in context/lesson-cards and the generator stitches them
between a generated header and footer. Hand-written modules, which is how a
plain-java lesson exists at all, live in context/lesson-modules with a
module.json beside the sources; java-basics is the first, and it rehearses the
exact shapes of Arm.java with the hardware taken out.

Output defaults to a sibling directory rather than inside the repo. That is not
tidiness: a build.gradle under an open editor workspace gets auto-imported by
the Java language server, which locks files in the output and leaves the next
run unable to clear it. Found the hard way.

The three remaining warnings are curriculum findings, not script bugs: the
Workshop 2 order inversion, and mech-3-MotionMagic and mech-4-ReadingState
being embedded by no page.